syntax = "proto3";
package regist;
option go_package = "userproto";
service RegistSrv {
    //用户注册
    rpc UserReigst (RegistReq) returns (RegistRes);
}

message RegistReq {
    //注册账号
    string account = 1;
    //注册签名 (JSON字符串，包括密码：password[CBCEncrypt]，设备ID：deviceID，平台：platform[web,iOS,Android]，时间戳：timestamp)
    string sign = 2;
}

message RegistRes {
    //账号
    string account = 1;
    //注册响应签名（JSON字符串，包括用户ID：userID，时间戳：timestamp，状态码：code，反馈消息：message）
    string sign = 4;
}